styled header and change username functionality and also added dice bear pixel art function. starting on chat message component

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fs": true
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@walletconnect/web3-provider": "^1.7.0",
     "moralis": "^0.0.176",
     "next": "latest",
