--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moralis": "^0.3.9",
-    "react-spinners": "^0.11.0"
+    "react-spinners": "^0.11.0",
+    "timeago-react": "^3.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
